--- a/CustomerMs.properties
+++ b/CustomerMs.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/infytel-customer
 friend.uri=http://localhost:8300/customers/
 plan.uri=http://localhost:8400/plans/
+custribbon.ribbon.eureka.enabled=false
+custribbon.ribbon.listOfServers=http://localhost:8301,http://localhost:8300
